# Projeto-PyDirDbJson

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: publish-to-test-pypi.yml  publish_to_pypi.yml  test.yml
pydirdbjson/: __init__.py  main.py
tests/: note.ipynb  note_after.ipynb
